Add tests for FilesystemMapperProvider